fix: align the help text beside submit button
This moves the help text for the Submit button from beneath to beside
the button.

--- a/drag_and_drop_v2/public/css/drag_and_drop.css
+++ b/drag_and_drop_v2/public/css/drag_and_drop.css
@@ -673,10 +673,15 @@
     position: relative;
 }
 
-.xblock--drag-and-drop .action .problem-action-buttons-wrapper,
-.xblock--drag-and-drop .action .submit-attempt-container {
+.xblock--drag-and-drop .action .problem-action-buttons-wrapper {
     display: inline-block;
     margin: 10px 0;
+}
+
+.xblock--drag-and-drop .action .submit-attempt-container {
+    display: inline-flex;
+    margin: 10px 0;
+    align-items: center;
 }
 
 .xblock--drag-and-drop .submission-feedback {
